<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/username_details"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <TextView
        android:id="@+id/phone_details"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone" />

    <TextView
        android:id="@+id/address_details"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address" />

    <TextView
        android:id="@+id/website_details"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/website_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website" />

    <View
        android:id="@+id/separator_details"
        android:background="@color/cardview_dark_background"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/company_details"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/company_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company" />
</LinearLayout>